Fixed font sizes and spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ img {
 
 .bio {
   color: #ffffff;
-  font-size: 12px;
+  font-size: 16px;
   font-family: 'Commissioner', sans-sans-serif;
 }
 
@@ -128,7 +128,7 @@ img {
 
 .description {
   font-family: 'Commissioner', sans-sans-serif;
-  font-size: 10px;
+  font-size: 14px;
   font-weight: 300;
   line-height: 1.29;
   letter-spacing: 0.1px;
